--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -8,5 +8,21 @@
 }
 
 .alert{
-    
+
+}
+
+#boton-gordo{
+    background-color:white;
+    padding:6% 12%;
+    border:solid;
+    border-color: white;
+    color:grey;
+    font-size: 30px;
+     -webkit-transition:  0.7s;
+     transition:  0.7s;
+     opacity:0.9;
+     display: inline-block;
+}
+#boton-gordo:hover{
+    opacity:1;
 }
