--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -1,5 +1,9 @@
 body{
-	font-family: 'Lato', sans-serif;
+    font-family: 'Lato', sans-serif;
+    background-color: #bac8e0;
+}
+.data, .recommend{
+    display: none;
 }
 .card{
 	    border-radius: 0px;
